@@ -22,8 +22,7 @@ class JdbcBulkMigrationKeysetSourceTest extends AbstractDbTest {
 	void readsAndResumesACompositeKeyThroughSelectByRowFactory() throws Exception {
 		testDb(connection -> {
 			execute(connection, "CREATE TABLE SQLAPP_KEYSET_FACTORY_TEST ("
-					+ "KEY1 INTEGER NOT NULL, KEY2 INTEGER NOT NULL, VALUE VARCHAR(32), "
-					+ "PRIMARY KEY (KEY1, KEY2))",
+					+ "KEY1 INTEGER NOT NULL, KEY2 INTEGER NOT NULL, VALUE VARCHAR(32), " + "PRIMARY KEY (KEY1, KEY2))",
 					"INSERT INTO SQLAPP_KEYSET_FACTORY_TEST VALUES "
 							+ "(2, 1, 'third'), (1, 2, 'second'), (1, 1, 'first')");
 			final Table table = table();
@@ -34,8 +33,7 @@ class JdbcBulkMigrationKeysetSourceTest extends AbstractDbTest {
 			final Row checkpointRow = table.newRow();
 			checkpointRow.put("KEY1", 1);
 			checkpointRow.put("KEY2", 1);
-			assertEquals(List.of("second", "third"),
-					values(source.iterator(source.resumeToken(checkpointRow))));
+			assertEquals(List.of("second", "third"), values(source.iterator(source.resumeToken(checkpointRow))));
 		});
 	}
 
@@ -58,27 +56,20 @@ class JdbcBulkMigrationKeysetSourceTest extends AbstractDbTest {
 					() -> new JdbcBulkMigrationKeysetSource(connection, table, List.of("VALUE")));
 
 			final Table indexed = new Table("KEYSET_INDEX_VALIDATION");
-			final Column indexKey1 = new Column("KEY1").setDataType(DataType.INT)
-					.setNotNull(true);
-			final Column indexKey2 = new Column("KEY2").setDataType(DataType.INT)
-					.setNotNull(true);
+			final Column indexKey1 = new Column("KEY1").setDataType(DataType.INT).setNotNull(true);
+			final Column indexKey2 = new Column("KEY2").setDataType(DataType.INT).setNotNull(true);
 			indexed.getColumns().add(indexKey1);
 			indexed.getColumns().add(indexKey2);
 			indexed.getIndexes().add("UIX_KEYSET", indexKey1, indexKey2).setUnique(true);
-			final var indexOrder = new JdbcBulkMigrationKeysetSource(connection, indexed,
-					List.of("KEY2", "KEY1"));
+			final var indexOrder = new JdbcBulkMigrationKeysetSource(connection, indexed, List.of("KEY2", "KEY1"));
 			final var reverseIndexOrder = new JdbcBulkMigrationKeysetSource(connection, indexed,
 					List.of("KEY1", "KEY2"));
-			assertNotEquals(indexOrder.getConfigurationFingerprint(),
-					reverseIndexOrder.getConfigurationFingerprint());
+			assertNotEquals(indexOrder.getConfigurationFingerprint(), reverseIndexOrder.getConfigurationFingerprint());
 
-			final Table caseInsensitive = new Table("KEYSET_CASE_VALIDATION")
-					.setCaseSensitive(false);
-			final Column caseKey = new Column("KEY_ID").setDataType(DataType.INT)
-					.setNotNull(true);
+			final Table caseInsensitive = new Table("KEYSET_CASE_VALIDATION").setCaseSensitive(false);
+			final Column caseKey = new Column("KEY_ID").setDataType(DataType.INT).setNotNull(true);
 			caseInsensitive.getColumns().add(caseKey);
-			caseInsensitive.getConstraints().addUniqueConstraint("UK_CASE_KEY",
-					new ReferenceColumn("key_id"));
+			caseInsensitive.getConstraints().addUniqueConstraint("UK_CASE_KEY", new ReferenceColumn("key_id"));
 			new JdbcBulkMigrationKeysetSource(connection, caseInsensitive, List.of("KEY_ID"));
 		});
 	}
@@ -87,29 +78,24 @@ class JdbcBulkMigrationKeysetSourceTest extends AbstractDbTest {
 	void rejectsInvalidCustomCodecResultsBeforeExecutingSql() throws Exception {
 		testDb(connection -> {
 			final Table table = table();
+			assertThrows(IllegalArgumentException.class, () -> source(connection, table, null).iterator("token"));
+			assertThrows(IllegalArgumentException.class, () -> source(connection, table, List.of(1)).iterator("token"));
 			assertThrows(IllegalArgumentException.class,
-					() -> source(connection, table, null).iterator("token"));
-			assertThrows(IllegalArgumentException.class,
-					() -> source(connection, table, List.of(1)).iterator("token"));
-			assertThrows(IllegalArgumentException.class,
-					() -> source(connection, table, java.util.Arrays.asList(1, null))
-							.iterator("token"));
+					() -> source(connection, table, java.util.Arrays.asList(1, null)).iterator("token"));
 			assertThrows(IllegalArgumentException.class,
 					() -> source(connection, table, List.of(1, 2, 3)).iterator("token"));
 			assertThrows(IllegalStateException.class,
-					() -> source(connection, table, List.of(1, 2), " ")
-							.getConfigurationFingerprint());
+					() -> source(connection, table, List.of(1, 2), " ").getConfigurationFingerprint());
 		});
 	}
 
-	private static JdbcBulkMigrationKeysetSource source(final java.sql.Connection connection,
-			final Table table, final List<Object> decoded) {
+	private static JdbcBulkMigrationKeysetSource source(final java.sql.Connection connection, final Table table,
+			final List<Object> decoded) {
 		return source(connection, table, decoded, "test-codec-v1");
 	}
 
-	private static JdbcBulkMigrationKeysetSource source(final java.sql.Connection connection,
-			final Table table, final List<Object> decoded,
-			final String configurationFingerprint) {
+	private static JdbcBulkMigrationKeysetSource source(final java.sql.Connection connection, final Table table,
+			final List<Object> decoded, final String configurationFingerprint) {
 		final BulkMigrationKeysetCodec codec = new BulkMigrationKeysetCodec() {
 			@Override
 			public String getConfigurationFingerprint() {
@@ -126,8 +112,7 @@ class JdbcBulkMigrationKeysetSourceTest extends AbstractDbTest {
 				return decoded;
 			}
 		};
-		return new JdbcBulkMigrationKeysetSource(connection, table,
-				List.of("KEY1", "KEY2"), codec, 100);
+		return new JdbcBulkMigrationKeysetSource(connection, table, List.of("KEY1", "KEY2"), codec, 100);
 	}
 
 	private static List<String> values(final java.util.Iterator<Row> rows) {
